@@ -67,6 +67,7 @@
         <file>icons-png/volume.png</file>
         <file>icons-png/next.png</file>
         <file>icons-png/repeat.png</file>
+        <file>icons-png/refresh.png</file>
         <file>icons-png/resize_window.png</file>
         <file>icons-png/rewind10m.png</file>
         <file>icons-png/rewind10s.png</file>
